[[release-notes-5.8.1]]
== 5.8.1

*Date of Release:* ❓

*Scope:* Bug fixes since 5.8.0

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/59?closed=1+[5.8.1] milestone page in the JUnit repository on
GitHub.


[[release-notes-5.8.1-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.8.1-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* `JAVA_18` has been added to the `JRE` enum for use with JRE-based execution conditions.


[[release-notes-5.8.1-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓